// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`logo snapshot: Default 1`] = `
<div>
  <div
    class="MuiBox-root css-rsa0i0"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: LargeSize 1`] = `
<div>
  <div
    class="MuiBox-root css-9m3z7"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogo 1`] = `
<div>
  <div
    class="MuiBox-root css-rsa0i0"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogoWithBlackBackground 1`] = `
<div>
  <div
    class="MuiBox-root css-1o0i47h"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogoWithBlackBackgroundAndStars 1`] = `
<div>
  <div
    class="MuiBox-root css-1o0i47h"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SimpleLogoWithStars 1`] = `
<div>
  <div
    class="MuiBox-root css-rsa0i0"
  >
    <img
      alt="Logo"
      src="/simple-logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;

exports[`logo snapshot: SmallSize 1`] = `
<div>
  <div
    class="MuiBox-root css-1lenzg4"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: WithBlackBackground 1`] = `
<div>
  <div
    class="MuiBox-root css-1o0i47h"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
  </div>
</div>
`;

exports[`logo snapshot: WithBlackBackgroundAndStars 1`] = `
<div>
  <div
    class="MuiBox-root css-1o0i47h"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;

exports[`logo snapshot: WithStars 1`] = `
<div>
  <div
    class="MuiBox-root css-rsa0i0"
  >
    <img
      alt="Logo"
      src="/logo.svg"
      style="position: relative; width: 100%; height: 100%; object-fit: contain; z-index: 2;"
    />
    <img
      alt="Stars background"
      src="/stars.svg"
      style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: cover; z-index: 1;"
    />
  </div>
</div>
`;
